--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="public/svg/logo.svg" sizes="any" type="image/svg+xml">
+    <link rel="icon" href="/favicon.ico" sizes="any" type="image/svg+xml">
     <title>Popstats</title>
   </head>
   <body>
